[tool.poetry]
name = "solvis-whv-study"
version = "0.1.0"
description = "a simple single location analysis using solvis."
authors = ["Chris Chamberlain <chrisbc@artisan.co.nz>"]
license = "AGPL3"
readme = "README.md"
packages = [{include = "solvis_whv_study"}]

[tool.poetry.dependencies]
python = "^3.10"
nzshm-model = "^0.2.0"
matplotlib = "^3.7.1"
pandas = "^1.5.3"
numpy = "^1.24.2"
geopandas = "^0.12.2"
solvis = "^0.6.0"


[tool.poetry.group.dev.dependencies]
ipython = "^8.12.0"
black = "^23.3.0"
isort = "^5.12.0"
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
